# Exogen-Discord-Bot

./: .gitignore  LICENSE  README.md  artwork.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: advisors.py  calcs.py  calcs2.py  mod.py
