[tool.poetry]
name = "exogen-discord-bot"
version = "0.1.0"
description = "Python bot for integrating Exogen with it's Discord server."
authors = ["drewt <drew.tschetter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
asyncio = "^3.4.3"
numpy = "^1.20.1"
Flask = "^1.1.2"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
