[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["drewt <drew.tschetter@gmail.com>"]
description = "Python bot for integrating Exogen with it's Discord server."
name = "exogen-discord-bot"
version = "0.1.0"
[tool.poetry.dependencies]
DateTime = "^4.3"
Flask = "^2.3.2"
discord = "^1.0.1"
numpy = "^1.22.0"
python = "^3.8"
discord-py-slash-command = "^3.0.1"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
